Добавлен оверлей и интерактивная карта

--- a/index.html
+++ b/index.html
@@ -244,7 +244,10 @@
 
   <section class="modal modal-map">
     <h2 class="modal-map__title visually-hidden">Как нас найти?</h2>
-    <p class="modal-map__content">
+
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043651638!2d30.320894616359325!3d59.93879418187617!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0KDQvtGB0YHQuNGPLCAxOTExODY!5e0!3m2!1sru!2sby!4v1531495341603" width="764" height="560" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+    <p class="modal-map__content visually-hidden">
       <img class="modal-map__img" src="img/content/map.jpg" alt="АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, УЛ. Б. КОНЮШЕННАЯ, Д. 19/8" width="780" height="574">
     </p>
     <button class="modal-map__close modal__close">Закрыть</button>
